<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edtStudentId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/studentId" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtStudentId"
        android:layout_margin="@dimen/dp_12"
        android:hint="@string/studentName" />

    <RadioGroup
        android:layout_marginLeft="@dimen/dp_12"
        android:id="@+id/radGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtName">
        <RadioButton
            android:id="@+id/radMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="@dimen/sp_16" />

        <RadioButton
            android:id="@+id/radFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <EditText
        android:id="@+id/edtAverageMark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radGender"
        android:layout_margin="12dp"
        android:hint="@string/averageMark" />

    <Button
        android:id="@+id/btnSave"
        android:layout_centerHorizontal="true"
        android:text="@string/save"
        android:layout_below="@id/edtAverageMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
