<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dp_8"
    android:layout_marginRight="@dimen/dp_8"
    android:layout_marginTop="@dimen/dp_4"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/studentId"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/txtStudentId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_4"
        android:layout_toRightOf="@id/txt1"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt1"
        android:text="@string/studentName"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/txtStudentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtStudentId"
        android:layout_marginLeft="@dimen/dp_4"
        android:layout_toRightOf="@id/txt2"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt2"
        android:text="@string/gender"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/txtGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtStudentName"
        android:layout_marginLeft="@dimen/dp_4"
        android:layout_toRightOf="@id/txt3"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt3"
        android:text="@string/averageMark"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/txtAverageMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtGender"
        android:layout_marginLeft="@dimen/dp_4"
        android:layout_toRightOf="@id/txt4"
        android:textSize="@dimen/sp_16" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/txtAverageMark"
        android:text="@string/delete" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtAverageMark"
        android:layout_toLeftOf="@id/btnDelete"
        android:text="@string/edit" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@id/btnDelete"
        android:background="@color/black" />

</RelativeLayout>
